--- a/SPI-PARK/assets/css/style.css
+++ b/SPI-PARK/assets/css/style.css
@@ -1,103 +1,316 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
-/* Cores para o tema padrão */
 :root {
-    --primary-color: #fcfcfc; 
-    --secondary-color: #626a70; /* cor principal dark-mode */
-    --tertiary-color: #3FA2F6; 
-    --text-color: #0F67B1; 
-    --dark-mode: #000;
-    --nav-color: #FAFFAF; 
+  --primary-color: #ffffff;
+  --secondary-color: #202026; /* cor principal dark-mode */
+  --tertiary-color: #fbbc05;
+  --card-color: #f4f4f4;
+  --dark-mode: #000;
+  --nav-color: #faffaf;
 }
-
-/* Cores para o dark mode */
-:root.dark-mode {
-    --primary-color: #31616e; 
-    --secondary-color: #0F67B1; 
-    --tertiary-color: #20c997; 
-    --text-color: #0F67B1; 
-    --dark-mode: #000;
-}
-
 * {
-    margin: 0;
-    padding: 0;
-}
-.container.active {
-    background: var(--secondary-color);
-}
-
-  .btn {
-    width: 60px;
-    height: 20px;
-    border-radius: 60px;
-    position: relative;
-    cursor: pointer;
-    box-shadow: 0 0 0 3px var(--dark-mode);
-    margin-top: 10px;
-    
-    
-}
-
-.btn:before {
-    content: '';
-    position: absolute;
-    width: 10px;
-    height: 10px;
-    border-radius: 50px;
-    top: 50%;
-    left: 5px;
-    transform: translateY(-50%);
-    transition: left .5s;
-    box-shadow: 0 0 0 3px var(--dark-mode);
-}
-
-.btn.active:before {
-    left: 42px;
-}
-
-
-
-
-@media(max-width: 991px){
-    .sidebar{
-        background-color: rgba(255, 255, 255, 0.15);
-        backdrop-filter: blur(10px);
-    }
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
-
-/* Estilização do Navbar */
-.navbar {
-    font-weight: 700; /* Texto em negrito */
-    font-size: 24px;
-}
-
-.navbar-nav .nav-link {
-    /* Estilos para os links do navbar */
-    color: #000000; /* Cor dos links */
-}
-
-.navbar-nav .nav-link:hover {
-    /* Estilos para os links do navbar no hover */
-    color: #4485c7; /* Cor dos links no hover */
-}
-
 /* modo dark mode */
 .container {
-    background: var(--primary-color);
-    transition: background .5s;
-   
+  background: var(--primary-color);
+  transition: background 0.5s;
+}
+.container.active 
+{
+  background: var(--secondary-color);
+  color: var(--primary-color);
+}
+/*Navbar e toggle tema dark */
+.container.active .navbar-nav .nav-link {
+  color: var(--primary-color);
+}
+.container.active .navbar-nav .nav-link:hover {
+  color: var(--tertiary-color);
+}
+.container.active .btn {
+  box-shadow: 0 0 0 3px var(--primary-color); /* Altera a cor do box-shadow no tema dark */
+}
+.container.active .btn:before {
+  box-shadow: 0 0 0 3px var(--primary-color);
+}
+.container.active .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='%23FBBC05' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+.container.active .duvidas {
+  background-color: #323840;
+}
+/* Botão do modo Dark*/
+.btn {
+  width: 60px;
+  height: 20px;
+  border-radius: 60px;
+  position: relative;
+  cursor: pointer;
+  box-shadow: 0 0 0 3px var(--dark-mode);
+  margin-top: 10px;
+}
+.btn:before {
+  content: "";
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  border-radius: 50px;
+  top: 50%;
+  left: 5px;
+  transform: translateY(-50%);
+  transition: left 0.5s;
+  box-shadow: 0 0 0 3px var(--dark-mode);
+}
+.btn.active:before {
+  left: 42px;
+}
+/* Estilização do Navbar */
+.navbar {
+  font-weight: 700;
+  font-size: 24px;
+}
+.navbar-nav .nav-link {
+  color: var(--dark-mode);
+}
+.navbar-nav .nav-link:hover {
+  color: var(--tertiary-color);
+}
+/* Imagem com degrade linear */
+.apresentacao {
+  position: relative;
+}
+.apresentacao img {
+  width: 1300px;
+  height: 556px;
+  display: block;
+  margin: 0 auto;
+  position: relative;
+}
+.apresentacao::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    to left,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(243, 230, 53, 0.95) 50%
+  );
+}
+.texto-sobre-degrade {
+  position: absolute; /* Posiciona o texto sobre o degradê */
+  top: 50%; /* Ajusta verticalmente */
+  left: 10%; /* Ajusta horizontalmente  */
+  transform: translateY(-50%); /* Centraliza verticalmente */
+  color: var(--dark-mode); /* Cor do texto */
+  text-align: left; /* Alinha o texto à esquerda */
+  width: 50%;
+  z-index: 10; /* Garante que o texto esteja acima do degradê */
 }
 
-.sobre h1 {
-    margin-top: 40px;
-    text-align: center;
+.texto-sobre-degrade h1 {
+  font-size: 44px;
+  margin-bottom: 10px;
 }
 
-.sobre p {
-    text-align: center;
+.texto-sobre-degrade p {
+  font-size: 28px;
+}
+
+.duvidas {
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra para o efeito 3D */
+  transform: translateZ(
+    0
+  ); /* Ativa o hardware acceleration para melhorar o desempenho */
+  transition: transform 0.3s ease-out, box-shadow 0.3s ease-out; /* Transição suave */
+
+  /* Estilos para os spans dentro da div */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.duvidas:hover {
+  transform: translateY(-3px); /* Eleva a div ao passar o mouse */
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Aumenta a sombra ao passar o mouse */
+}
+.duvidas span {
+  font-size: 20px;
+  font-weight: 700;
+}
+.duvidas img {
+  width: 20px;
+  vertical-align: middle;
+}
+/* cards */
+.conteudo {
+  display: grid;
+  place-items: center;
+  margin-inline: 1.5rem;
+  padding-block: 5rem;
+}
+.card__conteudo {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+}
+.card__article {
+  position: relative;
+  background-color: var(--nav-color);
+  width: 238px;
+  height: 238px;
+  border-radius: 1.5rem;
+  color: #000;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transform: translateZ(0);
+  transition: transform 0.3s ease-out, box-shadow 0.3s ease-out;
+}
+.card__article:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+.card__article h1 {
+  margin-top: 50px;
+  text-align: center;
+  font-size: 28px;
+  font-weight: 700;
+}
+.card__article p {
+  text-align: center;
+  font-size: 20px;
+  opacity: 60%;
+}
+.icons {
+  width: 150px;
+  padding: 1.5rem 2rem;
+  border-radius: 1rem;
+  position: absolute;
+  left: 50%;
+  top: 0%;
+  transform: translate(-50%, -50%);
+  transition: opacity 1s 1s;
+}
+/* Forms*/
+.formulario {
+  width: 100%;
+  height: 80vh;
+  display: flex;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.212);
+}
+.form {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 3rem;
+}
+.form-header {
+  margin-bottom: 3rem;
+  display: flex;
+  justify-content: space-between;
+}
+.input-group {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 1rem 0;
+}
+.input-box {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1.1rem;
+}
+.input-box input {
+  margin: 0.6rem 0;
+  padding: 0.8rem 1.2rem;
+  border: none;
+  border-radius: 10px;
+  box-shadow: 1px 1px 6px #0000001c;
+  font-size: 0.8rem;
+}
+.input-box input:hover {
+  background-color: #eeeeee75;
+}
+.input-box input:focus-visible {
+  outline: 1px solid var(--nav-color);
+}
+.input-box input::placeholder {
+  color: #000000be;
+}
+.continue-button button {
+  width: 100%;
+  margin-top: 2.5rem;
+  border: none;
+  background-color: var(--tertiary-color);
+  padding: 0.62rem;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.continue-button button:hover {
+  background-color: #a6af29;
+}
+.continue-button button a {
+  text-decoration: none;
+  font-size: 0.93rem;
+  font-weight: 700;
+  color: #ffffff;
+}
+
+/* Responsividade */
+@media screen and (max-width: 1064px) {
+  .formulario {
+    width: 100%;
+    height: auto;
+  }
+  .input-group {
+    flex-direction: column;
+    z-index: 5;
+    padding-right: 5rem;
+    max-height: 10rem;
+    overflow-y: scroll;
+    flex-wrap: nowrap;
+  }
+}
+@media (max-width: 991px) {
+  .sidebar {
+    background-color: rgba(255, 255, 255, 0.15);
+    backdrop-filter: blur(10px);
+  }
+
+  .apresentacao img {
+    max-width: 100%;
+    height: auto;
+  }
+
+  .texto-sobre-degrade {
+    width: 80%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+  }
+
+  .texto-sobre-degrade h1 {
+    font-size: 28px;
+  }
+
+  .texto-sobre-degrade p {
+    font-size: 16px;
+  }
+}
+@media (max-width: 768px) {
+  .card__conteudo {
+    grid-template-columns: repeat(1, 1fr);
+    gap: 50px;
+  }
 }
