--- a/SPI-PARK/assets/css/style.css
+++ b/SPI-PARK/assets/css/style.css
@@ -3,10 +3,11 @@
 :root {
   --primary-color: #ffffff;
   --secondary-color: #202026; /* cor principal dark-mode */
-  --tertiary-color: #fbbc05;
+  --tertiary-color: #F3E635;
   --card-color: #f4f4f4;
   --dark-mode: #000;
   --nav-color: #faffaf;
+  --button-color: #FBBC05;
 }
 * {
   margin: 0;
@@ -159,6 +160,8 @@ body {
   place-items: center;
   margin-inline: 1.5rem;
   padding-block: 5rem;
+  position: relative;
+  z-index: 1;
 }
 .card__conteudo {
   display: grid;
@@ -203,10 +206,15 @@ body {
 }
 /* Forms*/
 .formulario {
+  position: relative; /* Para que o formulário seja posicionado abaixo dos cards */
+  z-index: 0;
+  transform: translateY(-200px); /* Ajuste para subir o formulário */
+  background-color: var(--tertiary-color);
   width: 100%;
-  height: 80vh;
+  height: 60vh;
   display: flex;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.212);
+  margin-top: 50px;
 }
 .form {
   width: 100%;
@@ -214,12 +222,18 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding: 3rem;
+  padding: 1rem;
+  color: var(--dark-mode);
+}
+
+.form .title {
+  text-align: center;
 }
 .form-header {
   margin-bottom: 3rem;
   display: flex;
   justify-content: space-between;
+  
 }
 .input-group {
   display: flex;
@@ -253,13 +267,15 @@ body {
   width: 100%;
   margin-top: 2.5rem;
   border: none;
-  background-color: var(--tertiary-color);
+  background-color: var(--button-color);
   padding: 0.62rem;
   border-radius: 5px;
   cursor: pointer;
+  color: var(--primary-color);
+  font-weight: 700;
 }
 .continue-button button:hover {
-  background-color: #a6af29;
+  background-color: #00000050;
 }
 .continue-button button a {
   text-decoration: none;
@@ -268,19 +284,94 @@ body {
   color: #ffffff;
 }
 
+/* Mapa*/
+.mapBox {
+  margin-top: -100px;
+  margin-bottom: 100px;
+}
+.map {
+  width: 100%;
+  height: 30vh;
+  
+}
+
+/* Tabela */
+
+.table {
+  width: 100%;
+  height: auto;
+  border-collapse: separate; /* Necessário para aplicar bordas arredondadas */
+  border-radius: 0.5rem; /* Ajuste o valor conforme necessário */
+  overflow: hidden; /* Para garantir que as bordas arredondadas sejam aplicadas */
+}
+.table th, .table td {
+  border: 1px solid black; /* Define bordas pretas */
+}
+.table th, .table tr {
+  border: 1px solid #000000; /* Cor das bordas */
+}
+
+.table th {
+  background-color: #ecdc45; /* Cor de fundo do cabeçalho */
+  font-size: 1.2rem;
+}
+
+/* Cor das linhas padrão */
+.table tbody td {
+  background-color: var(--nav-color);
+  font-size: 1.2rem; /* Cor padrão */
+}
+
+/* Cor das linhas "hover" */
+.table tbody td:hover {
+  background-color: #f5bc01; /* Cor ao passar o mouse */
+}
+
+.table caption {
+  font-size: 2.5rem;
+  background-color: var(--button-color);
+  font-weight: 700;
+  color: var(--dark-mode);
+}
+
+
+
+
+
+
+
+
 /* Responsividade */
 @media screen and (max-width: 1064px) {
   .formulario {
     width: 100%;
     height: auto;
   }
+
+  .form {
+    margin-top: 100px;
+  }
   .input-group {
     flex-direction: column;
     z-index: 5;
     padding-right: 5rem;
-    max-height: 10rem;
+    max-height: 15rem;
     overflow-y: scroll;
     flex-wrap: nowrap;
+  }
+
+  .card__article {
+    width: 200px;
+    height: 200px;
+  }
+
+  .card__article h1 {
+   
+    font-size: 24px;
+   
+  }
+  .card__article p {
+    font-size: 16px;
   }
 }
 @media (max-width: 991px) {
